[package]
name = "code_indexing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "~0.20.10"
tree-sitter-typescript = "~0.20.5"
 
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4"
env_logger = "0.7"