[package]
name = "graphgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

code_indexing = { path = "../code_indexing", version = "0.1.0" }
clap = "4.5.1"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4"
lazy_static = "1.4.0"
serde_json = "1.0.114"
